--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: A workflow for my Hello World file
+name: Hello World
 on:
   push:
   workflow_dispatch:
@@ -8,9 +8,9 @@ jobs:
   build:
     name: Hello world action
     runs-on: ubuntu-latest
-    permissions:
-      contents: 'read'
-      id-token: 'write'
+    # permissions:
+    #   contents: 'read'
+    #   id-token: 'write'
     steps:
     # actions/checkout MUST come before auth
       - uses: 'actions/checkout@v3'
