--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,8 +9,8 @@ jobs:
   build:
     name: Hello world action
     runs-on: ubuntu-latest
-    # permissions:
-    #   contents: 'read'
+    permissions:
+      contents: 'read'
     #   id-token: 'write'
     steps:
     # actions/checkout MUST come before auth
