--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,8 +10,8 @@ jobs:
     name: Hello world action
     runs-on: ubuntu-latest
     permissions:
-      contents: 'read'
-    #   id-token: 'write'
+      # contents: 'read'
+      id-token: 'write'
     steps:
     # actions/checkout MUST come before auth
       - uses: 'actions/checkout@v3'
