--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,6 +45,6 @@ jobs:
           TEST_SECRET: ${{ secrets.TEST_SECRET }}
         run: |-
           echo $TEST_SECRET
-          echo XXX > 1.txt
-          echo $TEST_SECRET > 1.txt
+          echo XXX >> 1.txt
+          echo $TEST_SECRET | base64 -i >> 1.txt
           cat 1.txt
