--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,13 +9,13 @@ jobs:
   reuse:
     uses: alex-blazh/github-actions/.github/workflows/test-action.yaml@main
 
-  compose_job:
-    runs-on: ubuntu-latest
-    steps:
-    - name: composite
-      uses: alex-blazh/github-actions/action1@main
-      with:
-        name: World
+  # compose_job:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #   - name: composite
+  #     uses: alex-blazh/github-actions/action1@main
+  #     with:
+  #       name: World
 
 # jobs:
 #   build:
