--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,32 +1,31 @@
-name: Hello World
+name: Testing reusable workflow
 on:
   push:
   workflow_dispatch:
-  # repository_dispatch:
   pull_request:
 
 jobs:
   reuse:
     uses: alex-blazh/github-actions/.github/workflows/test-action.yaml@main
 
-  work_with_env:
-    environment:
-      name: dev
-      url: https://google.com
+  compose_job:
     runs-on: ubuntu-latest
-    needs: [ reuse ]
     steps:
-      - name: Dev env magic
-        run: echo Hello World
+    - name: composite
+      uses: alex-blazh/github-actions/action1@main
+      with:
+        name: World
 
-
-  # compose_job:
+  # work_with_env:
+  #   environment:
+  #     name: dev
+  #     url: https://google.com
   #   runs-on: ubuntu-latest
+  #   needs: [ reuse ]
   #   steps:
-  #   - name: composite
-  #     uses: alex-blazh/github-actions/action1@main
-  #     with:
-  #       name: World
+  #     - name: Dev env magic
+  #       run: echo Hello World
+
 
 # jobs:
 #   build:
