--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,7 @@ jobs:
 
   compose_job:
     runs-on: ubuntu-latest
+    needs: [ reuse ]
     steps:
     - name: composite
       uses: alex-blazh/github-actions/action1@main
