--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,16 +6,16 @@ on:
 
 jobs:
   reuse:
-    uses: alex-blazh/github-actions/.github/workflows/test-action.yaml@main
+    uses: alex-blazh/github-actions/.github/workflows/test/test-action.yaml@main
 
-  compose_job:
-    runs-on: ubuntu-latest
-    needs: [ reuse ]
-    steps:
-    - name: composite
-      uses: alex-blazh/github-actions/action1@main
-      with:
-        name: World
+  # compose_job:
+  #   runs-on: ubuntu-latest
+  #   needs: [ reuse ]
+  #   steps:
+  #   - name: composite
+  #     uses: alex-blazh/github-actions/action1@main
+  #     with:
+  #       name: World
 
 
 
